--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -5,10 +5,14 @@ EXTRA_DIST= robinhood.init			\
 	robinhood.init.sles.in      		\
 	sysconfig_robinhood			\
 	sysconfig_robinhood.in			\
-	rbh-config				\
 	type_gen.pl				\
 	indent.sh 				\
 	demo/disk_usage.sh			\
 	demo/migr_purge.sh			\
 	demo/rh.migr_purge.conf			\
 	demo/write_data.sh
+
+dist_sbin_SCRIPTS=rbh-config
+if BACKUP_FS
+dist_sbin_SCRIPTS+=rbhext_tool
+endif
