fixed tests 10, 20b, 20e, 21b for POSIX filesystems

--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -316,6 +316,7 @@ Rmdir_Parameters
 db_update_policy
 {
 	md_update   = on_event_periodic(1sec,1min);
-	path_update = on_event_periodic(10sec,6h);
+# For Lustre v2 filesystems only:
+#	path_update = on_event_periodic(10sec,6h);
 	fileclass_update = periodic(30min);
 }
