Checking backend that backend is mounted on startup

--- a/doc/templates/backup_detailed.conf
+++ b/doc/templates/backup_detailed.conf
@@ -198,6 +198,16 @@ General
 	fs_path = /mnt/lustre;
 }
 
+# Backend configuration
+Backend
+{
+    # opt_string has the same syntax as opts in mount -o <opts>
+    # for basic backend, possible options are:
+    # root=<root_path>,mnt_type=<mount_type>,action_cmd=<cmd_path>,xattrs,timeout=<sec>
+    opt_string = "root=/backend,mnt_type=nfs";
+}
+
+
 # ChangeLog Reader configuration
 # Parameters for processing MDT changelogs :
 ChangeLog
