--- a/doc/templates/backup_basic.conf
+++ b/doc/templates/backup_basic.conf
@@ -31,7 +31,7 @@ General
 #### Backend configuration ####
 Backend
 {
-    opt_string = "root=/backend";
+    opt_string = "root=/backend,mnt_type=nfs";
 }
 
 # ChangeLog Reader configuration
