- Checking that backend FS is mounted on startup - Migration hints support for backup flavor - Classic config format for backend config

--- a/doc/templates/backup_basic.conf
+++ b/doc/templates/backup_basic.conf
@@ -31,7 +31,11 @@ General
 #### Backend configuration ####
 Backend
 {
-    opt_string = "root=/backend,mnt_type=nfs";
+    root     = "/backend";
+    mnt_type = nfs;
+
+    # copy wrapper script
+    action_cmd    = "/usr/sbin/rbhext_tool";
 }
 
 # ChangeLog Reader configuration
