--- a/doc/templates/backup_detailed.conf
+++ b/doc/templates/backup_detailed.conf
@@ -201,10 +201,15 @@ General
 # Backend configuration
 Backend
 {
-    # opt_string has the same syntax as opts in mount -o <opts>
-    # for basic backend, possible options are:
-    # root=<root_path>,mnt_type=<mount_type>,action_cmd=<cmd_path>,xattrs,timeout=<sec>
-    opt_string = "root=/backend,mnt_type=nfs";
+    # backend path and type
+    root          = "/backend";
+    mnt_type      = nfs;
+    # copy wrapper script
+    action_cmd    = "/usr/sbin/rbhext_tool";
+    copy_timeout  = 6h;
+    xattr_support = FALSE;
+    # check if the backend is mounted on startup
+    check_mounted = TRUE;
 }
 
 
