--- a/tests/lustre_fs/cfg/log_common.conf
+++ b/tests/lustre_fs/cfg/log_common.conf
@@ -50,5 +50,7 @@ FS_Scan {
 # for tests with backup purpose
 Backend
 {
-	opt_string = "root=/tmp/backend";
+    root = "/tmp/backend";
+    mnt_type=ext3;
+    check_mounted = FALSE;
 }
