--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -60,7 +60,9 @@ ListManager
 }
 
 # for tests with backup purpose
-Backend
+backend
 {
-	opt_string = "root=/tmp/backend";
+    root = "/tmp/backend";
+    mnt_type=ext3;
+    check_mounted = FALSE;
 }
