--- a/robinhood.old_spec.in
+++ b/robinhood.old_spec.in
@@ -223,6 +223,9 @@ fi
 
 %changelog
 
+* Thu Nov 25 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.2
+- [bugfix] fixed major issue of "duplicate key" errors
+
 * Fri Oct 22 2010 Thomas Leibovici <thomas.leibovici@cea.fr> 2.2.1
 - [feature] new purge command: --purge-class to apply purge policy on files in a given class
 - [feature] new migration command: --migrate-class to apply migration policy on files in a given class
