Same kind of error when reading changelogs.

--- a/tests/lustre_fs/cfg/info_collect2.conf
+++ b/tests/lustre_fs/cfg/info_collect2.conf
@@ -23,10 +23,18 @@ FS_Scan {
 	ignore { type == directory and name == ".lustre" }
 }
 
-Purge_policy
+Migration_policy
 {
 	Policy default
 	{
 		condition { last_mod > 1h }
+	}
+}
+
+Purge_policy
+{
+	Policy default
+	{
+		condition { last_access > 1h }
 	}
 }
