--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,22 +1,64 @@
 
-EXTRA_DIST= lhsm/1-test_setup.sh	\
-	lhsm/2-run-tests.sh		\
-	lhsm/3-tests-lustre.sh	\
-	lhsm/4-test_report.sh		\
-	lhsm/cleanup.sh		\
-	lhsm/README			\
-	lhsm/bench_rpc.sh		\
-	lhsm/cfg/common.conf		\
-	lhsm/cfg/test1.conf		\
-	lhsm/cfg/test2.conf		\
-	lhsm/cfg/test3.conf		\
-	lhsm/cfg/test_purge.conf	\
-	lhsm/cfg/test_purge2.conf	\
-	lhsm/cfg/test_rm1.conf	\
-	lhsm/cfg/test_xattr.conf	\
-	lhsm/cfg/test_path.conf	\
-	lhsm/cfg/immediate_rm.conf	\
-	lhsm/cfg/test_updt.conf	\
-	lhsm/cfg/test_trig.conf	\
-	lhsm/cfg/test_trig2.conf \
-	test_compil_switches.sh
+EXTRA_DIST= lustre_fs/1-test_setup.sh	\
+	lustre_fs/2-run-tests.sh		\
+	lustre_fs/3-tests-lustre.sh	\
+	lustre_fs/4-test_report.sh		\
+	lustre_fs/cleanup.sh		\
+	lustre_fs/README			\
+	lustre_fs/bench_rpc.sh		\
+	lustre_fs/cfg/common.conf		\
+	lustre_fs/cfg/test1.conf		\
+	lustre_fs/cfg/test2.conf		\
+	lustre_fs/cfg/test3.conf		\
+	lustre_fs/cfg/test_purge.conf	\
+	lustre_fs/cfg/test_purge2.conf	\
+	lustre_fs/cfg/test_rm1.conf	\
+	lustre_fs/cfg/test_xattr.conf	\
+	lustre_fs/cfg/test_path.conf	\
+	lustre_fs/cfg/immediate_rm.conf	\
+	lustre_fs/cfg/test_updt.conf	\
+	lustre_fs/cfg/test_trig.conf	\
+	lustre_fs/cfg/test_trig2.conf   \
+    lustre_fs/cfg/info_collect.conf \
+    lustre_fs/cfg/info_collect2.conf \
+    lustre_fs/cfg/log1.conf         \
+    lustre_fs/cfg/log1b.conf        \
+    lustre_fs/cfg/log2.conf         \
+    lustre_fs/cfg/log2b.conf        \
+    lustre_fs/cfg/log3.conf         \
+    lustre_fs/cfg/log3b.conf        \
+    lustre_fs/cfg/log_common.conf   \
+    lustre_fs/cfg/test_fileclass.conf \
+    lustre_fs/cfg/test_pools.conf   \
+    lustre_fs/cfg/test_trig3.conf   \
+    posix_fs/1-test_setup.sh    \
+    posix_fs/2-run-tests.sh     \
+    posix_fs/3-test_report.sh   \
+    posix_fs/README             \
+    posix_fs/cfg/common.conf    \
+    posix_fs/cfg/immediate_rm.conf  \
+    posix_fs/cfg/info_collect.conf  \
+    posix_fs/cfg/info_collect2.conf  \
+    posix_fs/cfg/log1.conf  \
+    posix_fs/cfg/log1b.conf \
+    posix_fs/cfg/log2.conf  \
+    posix_fs/cfg/log2b.conf \
+    posix_fs/cfg/log3.conf  \
+    posix_fs/cfg/log3b.conf \
+    posix_fs/cfg/log_common.conf    \
+    posix_fs/cfg/test1.conf     \
+    posix_fs/cfg/test2.conf     \
+    posix_fs/cfg/test3.conf     \
+    posix_fs/cfg/test_fileclass.conf    \
+    posix_fs/cfg/test_path.conf     \
+    posix_fs/cfg/test_purge.conf    \
+    posix_fs/cfg/test_purge2.conf   \
+    posix_fs/cfg/test_rm1.conf      \
+    posix_fs/cfg/test_trig.conf     \
+    posix_fs/cfg/test_trig2.conf    \
+    posix_fs/cfg/test_trig3.conf    \
+    posix_fs/cfg/test_updt.conf     \
+    posix_fs/cfg/test_xattr.conf    \
+    posix_fs/cleanup.sh             \
+	test_compil_switches.sh	    \
+	fill_fs.sh
