--- a/Makefile.am
+++ b/Makefile.am
@@ -69,7 +69,8 @@ EXTRA_DIST= robinhood.spec robinhood.spec.in   		\
         doc/templates/tmp_fs_mgr_detailed.conf  	\
 	LICENSE KnownBugs README.tmp_fs_mgr README.Lustre_HSM	\
 	doc/admin_guides/robinhood_v220_admin_guide-tmp_fs_mgr.pdf \
-	doc/admin_guides/robinhood_v220_tutorial-tmp_fs_mgr.pdf
+	doc/admin_guides/robinhood_v220_tutorial-tmp_fs_mgr.pdf \
+	ChangeLog
 
 
 
