Fixed sanity tests 7 and 19 for backup purpose

--- a/tests/lustre_fs/cfg/log_common.conf
+++ b/tests/lustre_fs/cfg/log_common.conf
@@ -53,4 +53,5 @@ Backend
     root = "/tmp/backend";
     mnt_type=ext3;
     check_mounted = FALSE;
+    action_cmd = "../../scripts/rbhext_tool";
 }
