--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -65,4 +65,5 @@ backend
     root = "/tmp/backend";
     mnt_type=ext3;
     check_mounted = FALSE;
+    action_cmd = "../../scripts/rbhext_tool";
 }
