Preparing minor release 2.2.3

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -263,6 +263,8 @@ purge_trigger
     high_watermark_pct = 90%;
     low_watermark_pct  = 87%;
     check_interval     = 5min;
+    # send mail when the high-watermark is reached
+    notify_hw          = TRUE;
 }
 
 ##### HSM remove policy ########
