--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -297,6 +297,12 @@ Purge_Trigger
     high_watermark_pct = 90% ;
     low_watermark_pct  = 85% ;
     check_interval     = 5min ;
+
+    # send mail when the high-watermark is reached
+    notify_hw = TRUE;
+
+    # do not raise alert if the low watermark cannot be reached
+    alert_lw = FALSE;
 }
 
 
