- See deferred removal per directory. - undo-rm command per directory

--- a/src/robinhood/Makefile.am
+++ b/src/robinhood/Makefile.am
@@ -76,7 +76,7 @@ rbh_hsm_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE
 endif
 
 if BACKUP_FS
-sbin_PROGRAMS=rbh-backup rbh-backup-report rbh-backup-recov
+sbin_PROGRAMS=rbh-backup rbh-backup-report rbh-backup-recov rbh-backup-undo-rm
 
 # dependencies:
 rbh_backup_DEPENDENCIES=$(all_libs)
@@ -94,6 +94,10 @@ rbh_backup_report_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURP
 rbh_backup_recov_SOURCES=robinhood_recov.c
 rbh_backup_recov_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 rbh_backup_recov_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
+
+rbh_backup_undo_rm_SOURCES=robinhood_undo_rm.c
+rbh_backup_undo_rm_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+rbh_backup_undo_rm_LDFLAGS=-static $(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 endif
 
 
