--- a/scripts/robinhood.init.sles.in
+++ b/scripts/robinhood.init.sles.in
@@ -79,7 +79,7 @@ RETVAL=0
 pidfile_name()
 {
 	local conf=$1
-	local pidfile=$VARRUN/${conf##*/}
+	local pidfile=$VARRUN/rbh.${conf##*/}
 	echo ${pidfile%.conf}
 }
 
@@ -180,7 +180,8 @@ check_or_start_fs()
 			echo
 			return 1
 		else
-			echo "Robinhood for $conf is running, try: ps -fp $(<$pidfile) m"
+			echo "Robinhood for $conf is running:"
+			ps -fp $(<$pidfile)
 			return 0
 		fi
 	else
