incr version to 2.3.0-0.rc1.1

--- a/tests/lustre_fs/cfg/info_collect2.conf
+++ b/tests/lustre_fs/cfg/info_collect2.conf
@@ -9,7 +9,7 @@ FS_Scan {
 	ignore { type == directory and name == ".lustre" }
 }
 
-Migration_policy
+Migration_policies
 {
 	Policy default
 	{
@@ -17,7 +17,7 @@ Migration_policy
 	}
 }
 
-Purge_policy
+Purge_policies
 {
 	Policy default
 	{
