--- a/tests/lustre_fs/cfg/test_trig2.conf
+++ b/tests/lustre_fs/cfg/test_trig2.conf
@@ -35,10 +35,10 @@ purge_policies
 # trigger on inode count
 purge_trigger
 {
-    # purge if volume on OST1 > 10MB
-    # until volume is 5MB
+    # purge if volume on OST1 > 100MB
+    # until volume is 80MB
     trigger_on         = OST_usage;
-    high_watermark_vol = 100B;
+    high_watermark_vol = 100MB;
     low_watermark_vol  = 80MB;
     check_interval     = 5min ;
 }
