test fixes after backporting 2.2 mods

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -271,8 +271,8 @@ purge_trigger
 
 hsm_remove_policy
 {
-    # set this parameter to 'TRUE' for disabling file removal in HSM
-    no_hsm_remove = FALSE;
+    # enable deferred removal in backend
+    hsm_remove = TRUE;
     # delay before impacting object removal in HSM
     deferred_remove_delay = 24h;
 }
