--- a/tests/posix_fs/cfg/test_rm1.conf
+++ b/tests/posix_fs/cfg/test_rm1.conf
@@ -57,7 +57,7 @@ purge_trigger
 hsm_remove_policy
 {
     # enable HSM removal
-    no_hsm_remove = FALSE;
+    hsm_remove = TRUE;
 
     #remove files 1 week after they have been removed from Lustre
     deferred_remove_delay = 30s;
