Implemented pre-maintenance mode.

--- a/doc/templates/backup_detailed.conf
+++ b/doc/templates/backup_detailed.conf
@@ -172,6 +172,12 @@ Migration_parameters
 
     # delay for checking copy status if no feedback has been received
     check_copy_status_delay = 1h;
+
+    ### pre-maintenance mode to ensure all data is archived at maintenance time ###
+    # start more aggressive migration 6h before maintenance
+    pre_maintenance_window = 6h;
+    # anyhow, don't migrate files modified in the last 10 min
+    maint_migr_delay_min = 10min;
 }
 
 ############ HSM file removal parameters #################
