--- a/robinhood.spec.in
+++ b/robinhood.spec.in
@@ -19,7 +19,7 @@
 %bcond_with mysql
 %bcond_with sqlite
 %bcond_with sherpa
-%bcond_with backup
+%bcond_with hsmlite
 
 # macro for defining dependencies
 
@@ -103,10 +103,10 @@ PolicyEngine for SHERPA cache manager
 Generated using options: @ac_configure_args@
 
 %else
-%if %{with backup}
+%if %{with hsmlite}
 
 %package %{purpose}
-Summary: PolicyEngine for filesystem backup
+Summary: PolicyEngine for basic HSM migration
 Group: Applications/System
 %pkg_dependencies
 
@@ -157,9 +157,9 @@ mkdir -p $RPM_BUILD_ROOT/%{_initrddir}
 install -m 644 doc/templates/hsm_policy_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
 install -m 644 doc/templates/hsm_policy_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
 %else
-%if %{with backup}
-install -m 644 doc/templates/backup_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
-install -m 644 doc/templates/backup_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
+%if %{with hsmlite}
+install -m 644 doc/templates/hsmlite_basic.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
+install -m 644 doc/templates/hsmlite_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
 %else
 install -m 644 doc/templates/tmp_fs_mgr_basic.conf  $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
 install -m 644 doc/templates/tmp_fs_mgr_detailed.conf $RPM_BUILD_ROOT/%{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates
@@ -222,9 +222,9 @@ fi
 %config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/hsm_policy_basic.conf
 %config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/hsm_policy_detailed.conf
 %else
-%if %{with backup}
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/backup_basic.conf
-%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/backup_detailed.conf
+%if %{with hsmlite}
+%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/hsmlite_basic.conf
+%config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/hsmlite_detailed.conf
 %else
 %config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/tmp_fs_mgr_basic.conf
 %config %{_sysconfdir}/robinhood.d/@PURPOSE_EXT@/templates/tmp_fs_mgr_detailed.conf
