Enabling purges with shook.

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -11,6 +11,9 @@ endif
 if MNTENTCOMPAT
 COMPAT_SRC=mntent_compat.c mntent_compat.h
 endif
+if SHOOK
+PURPOSE_SRC=shook_wrap.c
+endif
 
 libcommontools_la_SOURCES= RW_Lock.c SemN.c uidgidcache.c RobinhoodMisc.c global_config.c queue.c StringAlloc.c $(FS_SRC) $(PURPOSE_SRC) $(COMPAT_SRC)
 
