--- a/tests/lustre_fs/cfg/log_common.conf
+++ b/tests/lustre_fs/cfg/log_common.conf
@@ -54,4 +54,5 @@ Backend
     mnt_type=ext3;
     check_mounted = FALSE;
     action_cmd = "../../scripts/rbhext_tool";
+    shook_cfg = "/etc/shook.cfg";
 }
