--- a/src/include/Makefile.am
+++ b/src/include/Makefile.am
@@ -29,14 +29,13 @@ noinst_HEADERS+=tmp_fs_mgr_pipeline.h tmp_fs_mgr_types.def
 tmp_fs_mgr_types.h: tmp_fs_mgr_types.def $(TYPEGEN)
 all: tmp_fs_mgr_types.h
 endif
-if BACKUP_FS
-noinst_HEADERS+=backup_fs_types.h backup_fs_types.def backend_ext.h backend_mgr.h  backup_fs_pipeline.h
-backup_fs_types.h: backup_fs_types.def $(TYPEGEN)
-all: backup_fs_types.h
-
+if HSM_LITE
+noinst_HEADERS+=hsmlite_types.h hsmlite_types.def backend_ext.h backend_mgr.h  hsmlite_pipeline.h
+hsmlite_types.h: hsmlite_types.def $(TYPEGEN)
+all: hsmlite_types.h
 endif
 
-CLEANFILES = lustre_hsm_types.h tmp_fs_mgr_types.h sherpa_types.h backup_fs_types.h
+CLEANFILES = lustre_hsm_types.h tmp_fs_mgr_types.h sherpa_types.h hsmlite_types.h
 
 indent:
 	$(top_srcdir)/scripts/indent.sh
