--- a/src/policy_modules/Makefile.am
+++ b/src/policy_modules/Makefile.am
@@ -7,8 +7,12 @@ endif
 if SHERPA
 SUBDIRS = purge migration rmdir
 endif
-if BACKUP_FS
+if HSM_LITE
+if SHOOK
+SUBDIRS = purge migration hsm_remove
+else
 SUBDIRS = migration hsm_remove
+endif
 endif
 
 indent:
