Changed 'watermark' to 'threshold' in config and logs.

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -247,12 +247,12 @@ Purge_Policies
 
 # If the space used on an OST exceeds 85%,
 # release files stored on it until the OST usage
-# reaches the low watermark
+# reaches the low threshold
 purge_trigger
 {
     trigger_on         = OST_usage;
-    high_watermark_pct = 85%;
-    low_watermark_pct  = 80%;
+    high_threshold_pct = 85%;
+    low_threshold_pct  = 80%;
     check_interval     = 5min;
 }
 
@@ -260,11 +260,11 @@ purge_trigger
 purge_trigger
 {
     trigger_on         = global_usage;
-    high_watermark_pct = 90%;
-    low_watermark_pct  = 87%;
+    high_threshold_pct = 90%;
+    low_threshold_pct  = 87%;
     check_interval     = 5min;
-    # send mail when the high-watermark is reached
-    notify_hw          = TRUE;
+    # send mail when the high-threshold is reached
+    alert_high         = TRUE;
 }
 
 ##### HSM remove policy ########
