--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -285,8 +285,8 @@ Purge_Parameters
 Purge_Trigger
 {
     trigger_on         = OST_usage ;
-    high_watermark_pct = 85% ;
-    low_watermark_pct  = 80% ;
+    high_threshold_pct = 85% ;
+    low_threshold_pct  = 80% ;
     check_interval     = 5min ;
 }
 
@@ -294,15 +294,15 @@ Purge_Trigger
 Purge_Trigger
 {
     trigger_on         = global_usage ;
-    high_watermark_pct = 90% ;
-    low_watermark_pct  = 85% ;
+    high_threshold_pct = 90% ;
+    low_threshold_pct  = 85% ;
     check_interval     = 5min ;
 
-    # send mail when the high-watermark is reached
-    notify_hw = TRUE;
+    # send mail when the high-threshold is reached
+    alert_high = TRUE;
 
-    # do not raise alert if the low watermark cannot be reached
-    alert_lw = FALSE;
+    # do not raise alert if the low threshold cannot be reached
+    alert_low  = FALSE;
 }
 
 
