--- a/scripts/demo/rh.migr_purge.conf
+++ b/scripts/demo/rh.migr_purge.conf
@@ -90,8 +90,8 @@ purge_parameters {
 purge_trigger
 {
     trigger_on         = OST_usage ;
-    high_watermark_pct = 20% ;
-    low_watermark_pct  = 18% ;
+    high_threshold_pct = 20% ;
+    low_threshold_pct  = 18% ;
     check_interval     = 10s ;
 }
 
