--- a/tests/lustre_fs/cfg/test_trig.conf
+++ b/tests/lustre_fs/cfg/test_trig.conf
@@ -38,8 +38,8 @@ purge_trigger
     # purge if file count > 100
     # until file count is 80
     trigger_on         = global_usage;
-    high_watermark_cnt = 100;
-    low_watermark_cnt  = 80;
+    high_threshold_cnt = 100;
+    low_threshold_cnt  = 80;
     check_interval     = 5min ;
 }
 
