--- a/scripts/sanity-lhsm/rh-hsm.conf.in
+++ b/scripts/sanity-lhsm/rh-hsm.conf.in
@@ -103,8 +103,8 @@ purge_parameters
 purge_trigger
 {
     trigger_on         = OST_usage ;
-    high_watermark_pct = 50% ;
-    low_watermark_pct  = 45% ;
+    high_threshold_pct = 50% ;
+    low_threshold_pct  = 45% ;
     check_interval     = 10s ;
 }
 
