--- a/tests/lustre_fs/cfg/test_purge.conf
+++ b/tests/lustre_fs/cfg/test_purge.conf
@@ -47,8 +47,8 @@ purge_policies
 purge_trigger
 {
     trigger_on         = OST_usage ;
-    high_watermark_pct = 85% ;
-    low_watermark_pct  = 80% ;
+    high_threshold_pct = 85% ;
+    low_threshold_pct  = 80% ;
     check_interval     = 5min ;
 }
 
