--- a/tests/posix_fs/cfg/test_trig2.conf
+++ b/tests/posix_fs/cfg/test_trig2.conf
@@ -38,8 +38,8 @@ purge_trigger
     # purge if volume on OST1 > 10MB
     # until volume is 5MB
     trigger_on         = OST_usage;
-    high_watermark_vol = 100B;
-    low_watermark_vol  = 80MB;
+    high_threshold_vol = 100B;
+    low_threshold_vol  = 80MB;
     check_interval     = 5min ;
 }
 
