--- a/tests/posix_fs/cfg/test_trig3.conf
+++ b/tests/posix_fs/cfg/test_trig3.conf
@@ -37,8 +37,8 @@ purge_trigger
 {
     # purge if file count > 50
     trigger_on         = global_usage;
-    high_watermark_cnt = 50;
-    low_watermark_cnt  = 40;
+    high_threshold_cnt = 50;
+    low_threshold_cnt  = 40;
     check_interval     = 5min ;
     notify = TRUE;
 }
@@ -47,8 +47,8 @@ purge_trigger
 {
     # purge if volume > 100M
     trigger_on         = global_usage;
-    high_watermark_vol = 100MB;
-    low_watermark_vol  = 80MB;
+    high_threshold_vol = 100MB;
+    low_threshold_vol  = 80MB;
     check_interval     = 5min ;
     notify = TRUE;
 }
@@ -57,8 +57,8 @@ purge_trigger
 {
     # purge root usage > 10M
     trigger_on         = user_usage(root);
-    high_watermark_vol = 10MB;
-    low_watermark_vol  = 5MB;
+    high_threshold_vol = 10MB;
+    low_threshold_vol  = 5MB;
     check_interval     = 5min ;
     notify = TRUE;
 }
