Add non-regression tests for Lustre. Add filters in listmgr_reports

--- a/tests/lustre_fs/cfg/test_trig3.conf
+++ b/tests/lustre_fs/cfg/test_trig3.conf
@@ -56,7 +56,7 @@ purge_trigger
 purge_trigger
 {
     # purge root usage > 10M
-    trigger_on         = user_usage(root);
+    trigger_on         = user_usage;
     high_threshold_vol = 10MB;
     low_threshold_vol  = 5MB;
     check_interval     = 5min ;
