--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -3,8 +3,10 @@
 
 General
 {
-	fs_path = /mnt/lustre;
+	#fs_path = /mnt/lustre;
+    fs_path = /mnt/lustre/test_ao;
 	fs_type = lustre;
+    check_mounted = FALSE;
 }
 
 # ChangeLog Reader configuration
@@ -48,9 +50,10 @@ ListManager
 	{
 		server = "localhost";
 		db = "robinhood_lustre";
-		user = "robinhood";
+        user = "robinhood";
 		# password or password_file are mandatory
-		password = "robinhood";
+		#password = "robinhood";
+        password = "";
 	}
 
 	SQLite {
