--- a/tests/posix_fs/cfg/common.conf
+++ b/tests/posix_fs/cfg/common.conf
@@ -3,7 +3,10 @@
 
 General
 {
-	fs_path = "/tmp/mnt.rbh";
+#	fs_path = "/tmp/mnt.rbh";
+	fs_path = "/tmp/test_ao";
+    check_mounted = FALSE;
+    
 	fs_type = ext3;
 }
 
@@ -32,7 +35,8 @@ ListManager
 		db = "robinhood_test";
 		user = "robinhood";
 		# password or password_file are mandatory
-		password = "robinhood";
+	#	password = "robinhood";
+		password = "";
 	}
 
 	SQLite {
