Modify acct conf files

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -3,10 +3,8 @@
 
 General
 {
-	#fs_path = /mnt/lustre;
-    fs_path = /mnt/lustre/test_ao;
+	fs_path = /mnt/lustre;
 	fs_type = lustre;
-    check_mounted = FALSE;
 }
 
 # ChangeLog Reader configuration
@@ -52,8 +50,7 @@ ListManager
 		db = "robinhood_lustre";
         user = "robinhood";
 		# password or password_file are mandatory
-		#password = "robinhood";
-        password = "";
+		password = "robinhood";
 	}
 
 	SQLite {
