--- a/tests/posix_fs/cfg/acct_user_group.conf
+++ b/tests/posix_fs/cfg/acct_user_group.conf
@@ -3,7 +3,9 @@
 
 General
 {
-	fs_path = "/tmp/mnt.rbh";
+#	fs_path = "/tmp/mnt.rbh";
+    fs_path = "/tmp/test_ao";
+    check_mounted = FALSE;
 	fs_type = ext3;
 }
 
@@ -32,7 +34,8 @@ ListManager
 		db = "robinhood_test";
 		user = "robinhood";
 		# password or password_file are mandatory
-		password = "robinhood";
+		#password = "robinhood";
+        password = "";
 	}
 
 	SQLite {
