--- a/tests/lustre_fs/cfg/no_acct.conf
+++ b/tests/lustre_fs/cfg/no_acct.conf
@@ -3,8 +3,10 @@
 
 General
 {
-	fs_path = /mnt/lustre;
+#	fs_path = /mnt/lustre;
+    fs_path = /mnt/lustre/test_ao;
 	fs_type = lustre;
+    check_mounted = FALSE;
 }
 
 # ChangeLog Reader configuration
@@ -50,7 +52,8 @@ ListManager
 		db = "robinhood_lustre";
         user = "robinhood";
 		# password or password_file are mandatory
-		password = "robinhood";
+		#password = "robinhood";
+        password = "";
 	}
 
 	SQLite {
