--- a/tests/posix_fs/cfg/acct_user.conf
+++ b/tests/posix_fs/cfg/acct_user.conf
@@ -3,9 +3,7 @@
 
 General
 {
-#    fs_path = "/tmp/mnt.rbh";
-    fs_path = "/tmp/test_ao";
-    check_mounted = FALSE;
+    fs_path = "/tmp/mnt.rbh";
 	fs_type = ext3;
 }
 
@@ -34,8 +32,7 @@ ListManager
 		db = "robinhood_test";
 		user = "robinhood";
 		# password or password_file are mandatory
-		#password = "robinhood";
-        password = "";
+		password = "robinhood";
 	}
 
 	SQLite {
