--- a/tests/posix_fs/cfg/common.conf
+++ b/tests/posix_fs/cfg/common.conf
@@ -3,10 +3,7 @@
 
 General
 {
-#	fs_path = "/tmp/mnt.rbh";
-	fs_path = "/tmp/test_ao";
-    check_mounted = FALSE;
-    
+	fs_path = "/tmp/mnt.rbh";
 	fs_type = ext3;
 }
 
@@ -35,8 +32,7 @@ ListManager
 		db = "robinhood_test";
 		user = "robinhood";
 		# password or password_file are mandatory
-	#	password = "robinhood";
-		password = "";
+		password = "robinhood";
 	}
 
 	SQLite {
