--- a/tests/lustre_fs/cfg/test_trig4.conf
+++ b/tests/lustre_fs/cfg/test_trig4.conf
@@ -23,6 +23,14 @@ Filesets
 
 }
 
+migration_policies
+{
+    policy default
+    {
+        condition { last_mod >= 1 }
+    }
+}
+
 purge_policies
 {
     policy one_sec {
