--- a/tests/lustre_fs/cfg/acct_user_group.conf
+++ b/tests/lustre_fs/cfg/acct_user_group.conf
@@ -68,4 +68,5 @@ backend
     mnt_type=ext3;
     check_mounted = FALSE;
     action_cmd = "../../scripts/rbhext_tool";
+    shook_cfg = "/etc/shook.cfg";
 }
