non-regression test for inode based user quotas.

--- a/tests/posix_fs/cfg/test_trig3.conf
+++ b/tests/posix_fs/cfg/test_trig3.conf
@@ -63,6 +63,17 @@ purge_trigger
     notify = TRUE;
 }
 
+purge_trigger
+{
+    # purge root usage > 50 inodes
+    trigger_on         = user_usage(root);
+    high_threshold_cnt = 50 ;
+    low_threshold_cnt  = 40 ;
+    check_interval     = 5min ;
+    notify = TRUE;
+}
+
+
 purge_parameters
 {
     post_purge_df_latency = 0;
