Fixed test 302 (trigger check only)

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -67,3 +67,8 @@ backend
     check_mounted = FALSE;
     action_cmd = "../../scripts/rbhext_tool";
 }
+
+FS_Scan
+{
+    Ignore { path == "/mnt/lustre/.lustre" }
+}
